--- a/Notebooks/data_exploration_v1.ipynb
+++ b/Notebooks/data_exploration_v1.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ryant\\AppData\\Local\\Temp\\ipykernel_22612\\1084640584.py:3: DtypeWarning: Columns (0,19,49,59,118,129,130,131,134,135,136,139,145,146,147) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ryant\\AppData\\Local\\Temp\\ipykernel_20276\\1084640584.py:3: DtypeWarning: Columns (0,19,49,59,118,129,130,131,134,135,136,139,145,146,147) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('../Dataset/raw/accepted_loan_data.csv')\n"
      ]
     }
@@ -23,7 +23,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "7b8eeef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ryant\\miniconda3\\envs\\credit-risk\\python.exe\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.executable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "66b022c8",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1281,7 @@
        "4                NaN                    NaN              NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8e7ea4f6",
    "metadata": {},
    "outputs": [
@@ -1431,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "22e4c8f5",
    "metadata": {},
    "outputs": [
@@ -1442,7 +1472,7 @@
       "Columns with ≥80% missing values (39 total):\n",
       "\n",
       "member_id                                     1.000000\n",
-      "desc                                          0.944235\n",
+      "desc                                          0.944236\n",
       "mths_since_last_record                        0.841131\n",
       "annual_inc_joint                              0.946605\n",
       "dti_joint                                     0.946607\n",
@@ -1500,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "070a450a",
    "metadata": {},
    "outputs": [
@@ -1509,10 +1539,10 @@
       "text/plain": [
        "float64    87\n",
        "object     25\n",
-       "dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ea7e3c05",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "83a20782",
    "metadata": {},
    "outputs": [],
@@ -1663,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e4014027",
    "metadata": {},
    "outputs": [
@@ -1911,7 +1941,7 @@
        "4                    N  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a92b6fbd",
    "metadata": {},
    "outputs": [],
@@ -1946,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "57922fc6",
    "metadata": {},
    "outputs": [
@@ -2113,7 +2143,7 @@
        "4                    N  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2124,10 +2154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "aa6cb464",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ryant\\AppData\\Local\\Temp\\ipykernel_11540\\2358055981.py:9: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df[col] = pd.to_datetime(df[col],errors='coerce')\n",
+      "C:\\Users\\ryant\\AppData\\Local\\Temp\\ipykernel_11540\\2358055981.py:9: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df[col] = pd.to_datetime(df[col],errors='coerce')\n",
+      "C:\\Users\\ryant\\AppData\\Local\\Temp\\ipykernel_11540\\2358055981.py:9: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df[col] = pd.to_datetime(df[col],errors='coerce')\n"
+     ]
+    }
+   ],
    "source": [
     "columns_with_dates=[\n",
     "    'earliest_cr_line',\n",
@@ -2142,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "eefe465e",
    "metadata": {},
    "outputs": [
@@ -2216,7 +2259,7 @@
        "4       1998-06-01   2016-07-01         2018-03-01"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2227,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "58ff5d29",
    "metadata": {},
    "outputs": [
@@ -2369,7 +2412,7 @@
        "4             N                    N  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2380,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ac02faef",
    "metadata": {},
    "outputs": [],
@@ -2404,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "dfe5a31f",
    "metadata": {},
    "outputs": [
@@ -2472,7 +2515,7 @@
        "4   60 months    3 years"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2483,13 +2526,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "cc719c79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "emp_length\n",
        "10+ years    748005\n",
        "2 years      203677\n",
        "< 1 year     189988\n",
@@ -2501,10 +2545,10 @@
        "7 years       92695\n",
        "8 years       91914\n",
        "9 years       79395\n",
-       "Name: emp_length, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2515,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "4d7c5cbf",
    "metadata": {},
    "outputs": [],
@@ -2537,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "3f281c9a",
    "metadata": {},
    "outputs": [
@@ -2590,7 +2634,7 @@
        "Index: [0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2601,7 +2645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f5d4c3b8",
    "metadata": {},
    "outputs": [
@@ -2609,19 +2653,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved cleaned CSV. Final Shape:(2260701, 102)\n"
+      "Saved cleaned parquet. Final Shape:(2260701, 102)\n"
      ]
     }
    ],
    "source": [
-    "df.to_csv('../Dataset/processed/accepted_load_data_clean_v1.csv')\n",
+    "df.to_csv('../Dataset/processed/accepted_load_data_clean_v1.csv',index=False)\n",
     "print(f'Saved cleaned CSV. Final Shape:{df.shape}')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "credit-risk",
    "language": "python",
    "name": "python3"
   },
@@ -2635,7 +2679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
